src/objects/UpgradeStep__c.object
<CustomObject>
    <fields>
        <fullName>AllowCustomInput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Custom Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArgumentList__c</fullName>
        <label>Argument List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CheckClassName__c</fullName>
        <description>Class for CheckMethod</description>
        <label>CheckClassName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckMethod__c</fullName>
        <description>Method used to check if step needs to be completed (not for data/metadata manipulation).</description>
        <label>Check Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckResultUrl__c</fullName>
        <label>Check Result Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomInputLabel2__c</fullName>
        <label>Custom Input Label 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomInputLabel__c</fullName>
        <label>Custom Input Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomInputValue2__c</fullName>
        <label>Custom Input Value 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomInputValue__c</fullName>
        <label>Custom Input Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionMethod__c</fullName>
        <label>Execution Method</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instruction__c</fullName>
        <label>Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCheckDateTime__c</fullName>
        <label>Last Check Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCheckStatus__c</fullName>
        <label>Last Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>No Check Method</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastExecutionDateTime__c</fullName>
        <label>Last Execution Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastExecutionStatus__c</fullName>
        <label>Last Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Step</label>
        <referenceTo>UpgradeStep__c</referenceTo>
        <relationshipLabel>UpgradeSteps</relationshipLabel>
        <relationshipName>UpgradeSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentStepUniqueId__c</fullName>
        <label>Parent Step Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCheckMethod__c</fullName>
        <label>Post Check Method</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreCheckMethod__c</fullName>
        <label>Pre Check Method</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrecursorStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Precursor Step</label>
        <referenceTo>UpgradeStep__c</referenceTo>
        <relationshipLabel>Upgrade Steps (PrecursorStep)</relationshipLabel>
        <relationshipName>PrecursorSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrecursorStepUniqueId__c</fullName>
        <label>Precursor Step Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedBatchJobId__c</fullName>
        <label>Related Batch Job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepCommand__c</fullName>
        <label>Step Command</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StepExecutionOrder__c</fullName>
        <label>Step Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StepFrequency__c</fullName>
        <label>Step Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>First Install</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Upgrade / First Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Comma separated list of tags for the Upgrade Step, eg. v103upgrade.</description>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UpgradePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgrade Plan</label>
        <referenceTo>UpgradePlan__c</referenceTo>
        <relationshipLabel>Upgrade Steps</relationshipLabel>
        <relationshipName>UpgradeSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VersionIntroduced__c</fullName>
        <label>Version Introduced</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Upgrade Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UpgradePlanId__c</columns>
        <columns>StepExecutionOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Upgrade Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrade Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>